bugfix(client): fix z-index

--- a/client/src/components/Comment/index.module.scss
+++ b/client/src/components/Comment/index.module.scss
@@ -106,7 +106,7 @@
         position: absolute;
         left: -48px;
         top: 8px;
-        z-index: 1000;
+        z-index: 10;
       }
 
       header {
