--- a/client/src/components/Header/index.module.scss
+++ b/client/src/components/Header/index.module.scss
@@ -2,7 +2,7 @@
 
 $height: 64px;
 
-header {
+.header {
   position: relative;
   width: 100%;
   z-index: 100;
